fix: Stripe integration improvements

--- a/src/main/resources/success-page.html
+++ b/src/main/resources/success-page.html
@@ -17,12 +17,14 @@
       <div class="card border border-2 border-dark border-success shadow-lg rounded-3">
         <div class="card-img mx-auto w-75">
           <svg class="mx-5 my-5"
-               fill="#000000" viewBox="0 0 50 50"
-               xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+               fill="#000000"
+               viewBox="0 0 50 50"
+               xml:space="preserve"
+               xmlns="http://www.w3.org/2000/svg">
                 <g id="SVGRepo_bgCarrier" stroke-width="0"/>
             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"/>
-            <g id="SVGRepo_iconCarrier"> <circle cx="25" cy="25" r="25"
-                                                 style="fill:#25AE88;"></circle>
+            <g id="SVGRepo_iconCarrier">
+              <circle cx="25" cy="25" r="25" style="fill:#25AE88;"></circle>
               <polyline
                   points=" 38,15 22,33 12,25 "
                   style="fill:none;stroke:#FFFFFF;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;">
