--- a/src/main/resources/public/error-page.html
+++ b/src/main/resources/public/error-page.html
@@ -35,8 +35,9 @@
           </svg>
         </div>
         <div class="card-body d-flex flex-column align-items-center overflow-hidden">
-          <p class="card-text fs-3">Unexpected error happened.</p>
-          <button class="btn btn-primary" onClick="window.location.reload();">Retry</button>
+          <p class="card-text fs-3">Se ha producido un error inesperado</p>
+          <button class="btn btn-primary" onClick="window.location.reload();">Volver a intentar
+          </button>
         </div>
       </div>
     </div>
