--- a/src/main/resources/public/success-page.html
+++ b/src/main/resources/public/success-page.html
@@ -33,8 +33,9 @@
               </svg>
         </div>
         <div class="card-body d-flex flex-column align-items-center overflow-hidden">
-          <p class="card-text fs-3">Thanks for subscribing</p>
-          <a class="btn btn-primary" href="https://t.me/savemypetrolbot">Return to bot</a>
+          <p class="card-text fs-3">¡Te has suscrito corréctamente!</p>
+          <a class="btn btn-primary" href="https://t.me/savemypetrolbot?start=start">Volver al
+            bot</a>
         </div>
       </div>
     </div>
