--- a/src/main/resources/public/error-page.html
+++ b/src/main/resources/public/error-page.html
@@ -35,7 +35,7 @@
           </svg>
         </div>
         <div class="card-body d-flex flex-column align-items-center overflow-hidden">
-          <p class="card-text fs-3">Se ha producido un error inesperado</p>
+          <p class="card-text">Se ha producido un error inesperado</p>
           <button class="btn btn-primary" onClick="window.location.reload();">Volver a intentar
           </button>
         </div>
