--- a/src/main/resources/public/success-page.html
+++ b/src/main/resources/public/success-page.html
@@ -33,7 +33,7 @@
               </svg>
         </div>
         <div class="card-body d-flex flex-column align-items-center overflow-hidden">
-          <p class="card-text fs-3">¡Te has suscrito corréctamente!</p>
+          <p class="card-text">¡Te has subscrito corréctamente!</p>
           <a class="btn btn-primary" href="https://t.me/savemypetrolbot?start=start">Volver al
             bot</a>
         </div>
